<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="5px"
	android:stretchColumns="1" android:shrinkColumns="1">

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:text="@string/accedit_act_txt_network"
			android:paddingRight="5px" android:paddingTop="14px" />
		<RadioGroup android:id="@+id/accedit_act_radio_group"
			android:orientation="vertical">
			<RadioButton android:id="@+id/accedit_act_radio_mb"
				android:text="@string/network_mb_name" />
			<RadioButton android:id="@+id/accedit_act_radio_fb"
				android:text="@string/network_fb_name" />
		</RadioGroup>
	</TableRow>

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:text="@string/accedit_act_txt_id"
			android:paddingRight="5px" />
		<EditText android:id="@+id/accedit_act_edit_id"
			android:singleLine="true" android:lines="1" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:scrollHorizontally="false" />
	</TableRow>

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:text="@string/accedit_act_txt_pwd"
			android:paddingRight="5px" />
		<EditText android:id="@+id/accedit_act_edit_pwd"
			android:singleLine="true" android:lines="1" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:scrollHorizontally="false"
			android:password="true" />
	</TableRow>

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<LinearLayout></LinearLayout>
		<CheckBox android:id="@+id/accedit_act_check_autocon"
			android:text="@string/accedit_act_check_autocon" />
	</TableRow>

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<LinearLayout></LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button android:id="@+id/accedit_act_btn_save"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/accedit_act_btn_save" android:layout_weight="1"
				android:layout_marginTop="10px" />
			<Button android:id="@+id/accedit_act_btn_cancel"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/accedit_act_btn_cancel" android:layout_weight="1"
				android:layout_marginTop="10px" />
		</LinearLayout>
	</TableRow>

</TableLayout>